--- a/Projet_Bulletin/Projet_Bulletin.csproj
+++ b/Projet_Bulletin/Projet_Bulletin.csproj
@@ -92,6 +92,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accueil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Accueil.Designer.cs">
+      <DependentUpon>Accueil.cs</DependentUpon>
+    </Compile>
     <Compile Include="BDDConnection.cs" />
     <Compile Include="eleves.cs" />
     <Compile Include="gen_1.cs">
@@ -114,6 +120,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Accueil.resx">
+      <DependentUpon>Accueil.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="gen_1.resx">
       <DependentUpon>gen_1.cs</DependentUpon>
     </EmbeddedResource>
