Constructeur éleve, année1 et année2 + connexion BDD

--- a/Projet_Bulletin/Projet_Bulletin.csproj
+++ b/Projet_Bulletin/Projet_Bulletin.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Accueil.Designer.cs">
       <DependentUpon>Accueil.cs</DependentUpon>
     </Compile>
+    <Compile Include="annee1.cs" />
+    <Compile Include="annee2.cs" />
     <Compile Include="BDDConnection.cs" />
     <Compile Include="eleves.cs" />
     <Compile Include="gen_1.cs">
