--- a/Projet_Bulletin/packages.config
+++ b/Projet_Bulletin/packages.config
@@ -2,14 +2,18 @@
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.11.4" targetFramework="net461" />
+  <package id="iTextSharp.LGPLv2.Core" version="1.7.1" targetFramework="net461" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net461" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net461" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net461" />
   <package id="MySqlConnector" version="1.3.0" targetFramework="net461" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net461" />
+  <package id="Spire.PDF" version="7.2.9" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
